--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,3 +5,5 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.4.6", features = ["derive"] }
+dotenv = "0.15.0"
+reqwest = { version = "0.11.22", features = ["blocking"] }
